--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-express",
+  "name": "book-store",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -21,7 +21,8 @@
     "nuxt": "latest",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "vue-wysiwyg": "^1.7.2"
+    "vue-wysiwyg": "^1.7.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
