--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@nuxtjs/cloudinary": "^1.0.3-beta-3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.3.1",
     "cookie-parser": "~1.4.4",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
