--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@luxdamore/nuxt-prune-html": "^2.0.6",
     "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/cloudinary": "^1.0.3-beta-3",
     "bcryptjs": "^2.4.3",
@@ -25,7 +26,9 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
+    "@mdi/font": "^5.9.55",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/vuetify": "^1.11.3"
+    "@nuxtjs/vuetify": "^1.11.3",
+    "nuxt-purgecss": "^1.0.0"
   }
 }
